# pend

./: .gitignore  Cargo.toml  LICENSE  README.md  SCRATCHPAD.md
pend-cli/: Cargo.toml
pend-cli/src/: create.rs  delete.rs  edit.rs  editor.rs  main.rs
pend-core/: Cargo.toml
pend-core/src/: lib.rs  task_definition.rs  utils.rs
pend-daemon/: Cargo.toml
pend-daemon/src/: main.rs  utils.rs  watcher.rs
src/: main.rs  task_definition.rs  utils.rs
