[package]
name = "pend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
directories = "6.0.0"
env_logger = "0.11.8"
log = "0.4.27"
notify = "8.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
ulid = "1.2.1"
